--- a/latex/main.tex
+++ b/latex/main.tex
@@ -97,6 +97,7 @@
 }
 
 \usepackage{xcolor}
+\usepackage{CJKutf8} %chinese caracthers
 
 \definecolor{hedvig_blue}{HTML}{7D81F5}
 \definecolor{hedvig_lightgreen}{HTML}{81F093}
@@ -384,7 +385,9 @@ When the island group Vanuatu + Temotu was dropped, the model for overnight sail
 Furthermore, if we tease apart the argument concerning political complexity (for example in the full DAG 
 \ref{Predicting_lgs_DAG_full} in \ref{appendix_DAG_def} or \ref{Predicting_lgs_DAG_andy} in section \ref{sec:previous_research}), we find that conceptually the link between the number of languages and political complexity is not direct. It could be mediated through other factors such as network modularity, propensity to maintain long-distance contact etc. 
 
-Maintaining long-distance contact can be a function of shared cultural identity. \citet[218-291]{skirgaard2020multilevel} notes that there are not only fewer languages in the island groups of Polynesia, but they are also more similar to each other lexically than languages in Vanuatu are. This relationship does not hold for grammatical features however, languages in Polynesia are similarly different from each other grammatically as languages of Vanuatu and other island groups in Remote Oceania are (as measured by Grambank features, \citep{grambank_release}). It has been suggested, by \citet{silverstein1981limits}, \citet{francois2011} and others (c.f. \ref{mansfield2023dialect}), that communities pay special attention to words and sound differences as emblematic of shared ties --- but grammar tends to fly under the radar in this respect. This difference between Vanuatu and Polynesia in terms of lexical dissimilarity and language richness, but the similarity in terms of grammatical diversification may indicate that the cause does indeed lie in attitudes and social network organisation rather than merely time and environmental factors.
+\citet{watts_2018} found that politically complex societies in Oceania became Christian at a faster speed. This may indicate that changes propagate through a population quicker if the society is not egalitarian. If Christianity spreads faster in societies with higher complexity, it is possible to reason that other changes also might spread faster. If changes propagate quickly throughout a population, that leaves less possibility for diversification through natural drift or groups in the periphery staying more archaic compared to the centre. This interpretation relies on the understanding that the variable for political complexity (EA033) reveals something not only about jurisdictional power relationships in a given society, but also captures something about the social network of \emph{all} of its members (not just the leaders). Under this theory, people living in societies with higher political complexity would be able to travel further and have wider-ranging social networks, which in turn would lead to greater internal cultural homogeneity.
+
+Maintaining long-distance contact can indeed be a function of shared cultural identity. \citet[218-291]{skirgaard2020multilevel} notes that there are not only fewer languages in the island groups of Polynesia, but they are also more similar to each other lexically than languages in Vanuatu are. This relationship does not hold for grammatical features however, languages in Polynesia are similarly different from each other grammatically as languages of Vanuatu and other island groups in Remote Oceania are (as measured by Grambank features, \citep{grambank_release}). It has been suggested, by \citet{silverstein1981limits}, \citet{francois2011} and others (c.f. \citet{mansfield2023dialect}), that communities pay special attention to words and sound differences as emblematic of shared ties --- but grammar tends to fly under the radar in this respect. This difference between Vanuatu and Polynesia in terms of lexical dissimilarity and language richness, but the similarity in terms of grammatical diversification may indicate that the cause does indeed lie in attitudes and social network organisation rather than merely time and environmental factors.
 
 \citet{curriemace2009} argue that the reason behind their results (higher political complexity = larger language areas) is that societies with higher political complexity are more likely to be able to replace existing groups in an area, or otherwise incorporate (and possibly assimilate) them. It may also be the case that diversity in Polynesia was reduced by later expansionist efforts by societies with higher political complexity. For example, the island of Niuafo'ou which lies between Tonga, 'Uvea and S\={a}moa is home to a language that is most closely related to 'Uvean. This language has however become \emph{more} similar to Tongan during the period of Tongan domination in the area 1000-1300's (see \citet{aswani1998tongan} and \citep[2-9]{tuskamoto_niuafoou}). It may be that politically complex societies do not only \emph{maintain} homogeneity by continuing being in contact after first settlement, but can also reduce diversity which emerges after settlement through incorporation and cultural dominance later.
 
@@ -401,28 +404,32 @@ Whatever the political complexity variable is tracking, it is clear that it is o
 %A counterexample to this trend globally is the presence of large areas covered by language societies with low political complexity and majority pastoralist subsistence strategies. \citet{curriemace2009} found such cases, but their results concluded that the best predictor for the overall global patterns in their data was still political complexity. Another possible counterexample might be regions of many societies with high complexity where each society covers a small area in close proximity to each other. This is arguably the case for historic city states in Ancient Greece as these covered fairly small areas and had many political levels (see \citet{cartwright_2013}, and \citet[19]{sealey1976history}). However, the city states of Ancient Greece are usually all described as speaking different dialects of the same language, not different languages. This means that the language area of Ancient Greek (which is what \citet{curriemace2009} measured) would still be large and the average political complexity high, which would support their hypothesis.
 
 
-\citet{watts_2018} found that politically complex societies in Oceania became Christian at a faster speed. This may indicate that changes propagate through a population quicker if the society is not egalitarian. If Christianity spreads faster in societies with higher complexity, it is possible to reason that other changes also might spread faster. If changes propagate quickly throughout a population, that leaves less possibility for diversification through natural drift or groups in the periphery staying more archaic compared to the centre. This interpretation relies on the understanding that the variable for political complexity (EA033) reveals something not only about jurisdictional power relationships in a given society, but also captures something about the social network of \emph{all} of its members (not just the leaders). Under this theory, people living in societies with higher political complexity would be able to travel further and have wider ranging social networks, which in turn would lead to greater internal cultural homogeneity.
-
-It should also be noted that these preliminary results do not answer the question why Vanuatu societies are indeed less hierarchically politically complex. Nor do they disprove the hypothesis that there are more languages in Melanesian Remote Oceania because of influence from non-Austronesian migrants (c.f. \citet{lynch1981melanesian}). It is possible that there are more languages \emph{and} lower political complexity because of non-Austronesian contact but that these two variables are not actually related to \emph{each other} (c.f. Galton's problem \citep{naroll1965galton}). 
 
 %It is beyond the scope of this study to fully investigate the causality of language diversification in Remote Oceania. Causality in cultural evolution is very complicated, since factors can interact on many levels and it is difficult to control for unknown variables and proxy effects (c.f \citet{roberts2013linguistic}). In this instance, we will be satisfied with testing if there is a correlation between societal structure and language diversity that is still signifncant once environmental and settlement time has been incorporated into the model.
 
-Unlike the studies by \citet{gavin2012island}, \citet{hua2019ecological} and others, these results indicate that environmental factors such as rainfall seasonality and isolation have less of an impact on language diversity in Remote Oceania. The variables that have a significant effect are size (area and shoreline), time depth and political complexity. The fact that the results did not find that variables which have been predictive elsewhere have an impact in these models should not be taken as conclusive and may be due to limitations of this particular work.
+Unlike the studies by \citet{gavin2012island}, \citet{hua2019ecological} and others, the results of this study indicate that environmental factors such as rainfall seasonality and isolation have less of an impact on language diversity in Remote Oceania. This is most likely because most of the island groups share a similar climate, and there is therefore not enough variation to tease them apart.
 
 %As can be seen from the specific predictions the models make (Fig. \ref{medium_model_predict} and Fig. \ref{SBZR_model_predict}), neither model accurately predicts the key island groups in our dataset (Vanuatu, Kanaky (New Caledonia) and Temotu). Explaining the difference between Melanesian Remote Oceania and the rest is the most important factor in evaluating our hypothesis. Therefore the results should be interpreted as ultimately inconclusive. 
 
-\citet{Pacheco_Coelho_2019} explore an approach where the predictive power of each variable is not fixed, but changes with respect to location. Such an approach may give more insight into this dataset, and is left as future work.
+%\citet{Pacheco_Coelho_2019} explore an approach where the predictive power of each variable is not fixed, but changes with respect to location. Such an approach may give more insight into this dataset, and is left as future work.
 
-Possible limitations with this study are: a) the way that islands groups are defined, b) the manner in which the over-dispersion was accounted for and c) poor measurements of, or missing, key variables. Concerning (a), it may be that a grid-approach (c.f \citet{hua2019ecological}) is more appropriate. One of the problems with a grid approach is that it may work less well in an oceanic environment where connections between islands are not accounted for appropriately, but it should be tested in a similar manner to this study to evaluate if this indeed is a problem. A more finer grained approach similar to  \citet{gavin2012island} where each landmass is the unit of analysis may also be interesting. Both of these approaches may also aid with (b). There are other ways of accounting for (b), over-dispersion in data, besides a Negative Binomial distribution. For example, \citet[4-5]{gavin2012island} used the reciprocal of the language count. Regarding (c), \citet[4-5]{gavin2012island} found that Isolation was a significant variable in their models for predicting language diversity on Oceania (including Near Oceania). It is possible that the manner in which isolation was calculated here was suboptimal and that one or several of the other measurements of Isolation is more appropriate (see section \ref{sec:island_geo}). It was also not possible to include measurements of non-Austronesian contact in this study due to poor data coverage despite the fact that it could be a relevant factor (c.f. \citet{lipson_harvad_ancient_dna_vanuatu_2018, posth_jena_ancient_dna_vanuatu_2018}). 
+%Possible limitations with this study are: a) the way that islands groups are defined, b) the manner in which the over-dispersion was accounted for and c) poor measurements of, or missing, key variables. Concerning (a), it may be that a grid-approach (c.f \citet{hua2019ecological}) is more appropriate. One of the problems with a grid approach is that it may work less well in an oceanic environment where connections between islands are not accounted for appropriately, but it should be tested in a similar manner to this study to evaluate if this indeed is a problem. A more finer grained approach similar to  \citet{gavin2012island} where each landmass is the unit of analysis may also be interesting. Both of these approaches may also aid with (b). There are other ways of accounting for (b), over-dispersion in data, besides a Negative Binomial distribution. For example, \citet[4-5]{gavin2012island} used the reciprocal of the language count. Regarding (c), \citet[4-5]{gavin2012island} found that Isolation was a significant variable in their models for predicting language diversity on Oceania (including Near Oceania). It is possible that the manner in which isolation was calculated here was suboptimal and that one or several of the other measurements of Isolation is more appropriate (see section \ref{sec:island_geo}). It was also not possible to include measurements of non-Austronesian contact in this study due to poor data coverage despite the fact that it could be a relevant factor (c.f. \citet{lipson_harvad_ancient_dna_vanuatu_2018, posth_jena_ancient_dna_vanuatu_2018}). 
  
 
 \FloatBarrier
 \section{Conclusions}
-This study investigated the hypothesis that besides time depth and environmental factors, the distribution of languages in Remote Oceania is also significantly influenced by interaction patterns that can be measured by political complexity (c.f. \citet{pawley81, pawley2007}). In order to test this hypothesis, data was gathered on rainfall, temperature, settlement date, shoreline, isolation, latitude, area, and political complexity for island groups in Remote Oceania (c.f. \citet{curriemace2009, gavin2012island, hua2019ecological} and \citet{Pacheco_Coelho_2019}). The hypothesis was tested using a Negative Binomial Generalised Linear Model and stepwise dropping variables given an ANOVA Chi-square test.
+This study investigated the hypothesis that besides time depth and environmental factors (c.f. \citet{curriemace2009, gavin2012island, hua2019ecological} and \citet{Pacheco_Coelho_2019}), language richness in Remote Oceania is also significantly influenced by interaction patterns that can be measured by political complexity (c.f. \citet{pawley81, pawley2007}). The results lend support to this thesis, with some caveats. 
 
-The results of this study lend support to the theory that political complexity is a significant factor in predicting language diversity in Remote Oceania beyond what can be accounted for by environmental factors. Due to failed predictions for key regions (Vanuatu in particular), and other methodological limitations, this hypothesis needs to be investigated in future research. It appears that there is still much left to understand about language diversification in the region, and in Vanuatu in particular.
+Political complexity is, perhaps unsurprisingly, a complex variable. There are a number of phenomena in our social world that it could track, including network dynamics and in the case of Remote Oceania specifically --- contact with communities in New Guinea and Solomon Islands. It is clear that in terms of constructing predictive models, it contributes significant power to the case of island groups in Remote Oceania and language richness. However, in order to understand the situation we need to deconstruct this concept further and conduct studies that tease apart the specific circumstances --- especially in Vanuatu. 
 
-Future studies should use a grid and/or otherwise more fine grained approach to sampling, test different statistical methods that deal with over-dispersed data, and attempt to include better data on isolation, population and non-Austronesian contact. This study concentrated on the number of languages in a place, but it may also be revealing to include measurements of how different the languages are from each other, in lexicon and/or structure.
+
+
+%The results of this study lend support to the theory that political complexity is a significant factor in predicting language diversity in Remote Oceania beyond what can be accounted for by environmental factors, size of islands and time-depth of human settlement. However, 
+
+
+%Due to failed predictions for key regions (Vanuatu in particular), and other methodological limitations, this hypothesis needs to be investigated in future research. It appears that there is still much left to understand about language diversification in the region, and in Vanuatu in particular.
+
+%Future studies should use a grid and/or otherwise more fine grained approach to sampling, test different statistical methods that deal with over-dispersed data, and attempt to include better data on isolation, population and non-Austronesian contact. This study concentrated on the number of languages in a place, but it may also be revealing to include measurements of how different the languages are from each other, in lexicon and/or structure.
 
 
 %Linking study 2 to study 3
